feat: Upgraded to micronaut-4